force-app/main/default/objects/Attachments_Plus__c/fields/Specify_Other_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other_Additional_Information__c</fullName>
    <label>Specify Other Additional Information</label>
    <type>TextArea</type>
</CustomField>