force-app/main/default/objects/Attachments_Plus__c/fields/Specify_Other_Cure_Determination__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other_Cure_Determination__c</fullName>
    <label>Specify Other Cure Determination</label>
    <type>TextArea</type>
</CustomField>