force-app/main/default/objects/Attachments_Plus__c/fields/Specify_other_violations_cured__c.field-meta.xml
<CustomField>
    <fullName>Specify_other_violations_cured__c</fullName>
    <label>Specify other violations cured</label>
    <type>TextArea</type>
</CustomField>