force-app/main/default/objects/Attachments_Plus__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Litter</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Cashiering</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Subpoena</fullName>
            </value>
            <value>
                <fullName>OTA</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Photos</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>L&amp;R/RCI/CIU</fullName>
            </value>
            <value>
                <fullName>Cure Dispute</fullName>
            </value>
            <value>
                <fullName>Court Complaint</fullName>
            </value>
            <value>
                <fullName>Proposed Settlement</fullName>
            </value>
            <value>
                <fullName>PAGA Notice</fullName>
            </value>
            <value>
                <fullName>Other PAGA Document</fullName>
            </value>
            <value>
                <fullName>Employer Response/Cure</fullName>
            </value>
            <value>
                <fullName>Amended Notice</fullName>
            </value>
            <value>
                <fullName>In Forma Pauperis</fullName>
            </value>
            <value>
                <fullName>Court Order/Judgment</fullName>
            </value>
            <value>
                <fullName>Workers Compensation Insurance (WCI)</fullName>
            </value>
            <value>
                <fullName>Bond Collective Bargaining Agreement (CBA)</fullName>
            </value>
            <value>
                <fullName>Sample Leasing Contract</fullName>
            </value>
            <value>
                <fullName>Signed Employee Leasing Contract</fullName>
            </value>
            <value>
                <fullName>Employee Leasing WCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>