force-app/main/default/objects/Attachments_Plus__c/fields/Uploaded_the_LC_226_Cure_Determination__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_the_LC_226_Cure_Determination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Uploaded the LC 226 Cure Determination document in Upload PAGA Documents tab in Case Management (it is required)</description>
    <inlineHelpText>Uploaded the LC 226 Cure Determination document in Upload PAGA Documents tab in Case Management (it is required)</inlineHelpText>
    <label>Uploaded the LC 226 Cure Determination</label>
    <type>Checkbox</type>
</CustomField>