force-app/main/default/objects/Attachments_Plus__c/fields/VIP_Form_Section__c.field-meta.xml
<CustomField>
    <fullName>VIP_Form_Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>VIP Form Section</label>
    <referenceTo>VIPForm__VIP_Category__c</referenceTo>
    <relationshipLabel>Submission Detail</relationshipLabel>
    <relationshipName>Submission_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>