force-app/main/default/objects/Attachments_Plus__c/fields/VIP_Form_Section_Name_Display__c.field-meta.xml
<CustomField>
    <fullName>VIP_Form_Section_Name_Display__c</fullName>
    <description>Used in the form tool for the Attachment widget</description>
    <formula>VIP_Form_Section__r.VIPForm__Name_Displayed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Form Section Name Display</label>
    <type>Text</type>
</CustomField>