force-app/main/default/objects/Attachments_Plus__c/fields/VR_Interest__c.field-meta.xml
<CustomField>
    <fullName>VR_Interest__c</fullName>
    <label>VR-Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>