force-app/main/default/objects/Attachments_Plus__c/fields/VR_Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>VR_Liquidated_Damages__c</fullName>
    <label>VR-Liquidated Damages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>