force-app/main/default/objects/Attachments_Plus__c/fields/VRI_Attorneys_Fees_and_Costs__c.field-meta.xml
<CustomField>
    <fullName>VRI_Attorneys_Fees_and_Costs__c</fullName>
    <label>VRI-Attorneys’ Fees and Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>