force-app/main/default/objects/Attachments_Plus__c/recordTypes/Registration_Document.recordType-meta.xml
<RecordType>
    <fullName>Registration_Document</fullName>
    <active>true</active>
    <label>Registration Document</label>
</RecordType>