force-app/main/default/objects/Attachments_Plus__c/validationRules/Cure_Determination_document_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cure_Determination_document_required</fullName>
    <active>true</active>
    <errorConditionFormula>Uploaded_the_Preliminary_Cure_Determinat__c = FALSE &amp;&amp; NOT(ISPICKVAL( Small_Employer_Cure_Determination__c,""))</errorConditionFormula>
    <errorDisplayField>Uploaded_the_Preliminary_Cure_Determinat__c</errorDisplayField>
    <errorMessage>Please upload cure determination</errorMessage>
</ValidationRule>