force-app/main/default/objects/Attachments_Plus__c/validationRules/LC226_Determination_document_required.validationRule-meta.xml
<ValidationRule>
    <fullName>LC226_Determination_document_required</fullName>
    <active>true</active>
    <errorConditionFormula>Uploaded_the_LC_226_Cure_Determination__c=FALSE &amp;&amp;  NOT(ISPICKVAL(LC_226_Cure_Determination__c, ""))</errorConditionFormula>
    <errorDisplayField>Uploaded_the_LC_226_Cure_Determination__c</errorDisplayField>
    <errorMessage>Please upload cure determination</errorMessage>
</ValidationRule>