force-app/main/default/objects/Attachments_Plus__c/listViews/PAGA_Attorney_Review_Cure_Hearing_Req.listView-meta.xml
<ListView>
    <fullName>PAGA_Attorney_Review_Cure_Hearing_Req</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Case_Management__c</columns>
    <columns>Court_Case_Number__c</columns>
    <columns>Notice_Filer_Name__c</columns>
    <columns>Law_Firm__c</columns>
    <columns>Employer__c</columns>
    <columns>Plaintiff__c</columns>
    <columns>Manual_Screen_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Attachments_Plus__c.General_Document</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Employee Cure Hearing Request</value>
    </filters>
    <label>PAGA Attorney Review - Cure Hearing Req</label>
</ListView>