force-app/main/default/objects/Attachments_Plus__c/listViews/PAGA_possible_duplicate_attachments.listView-meta.xml
<ListView>
    <fullName>PAGA_possible_duplicate_attachments</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Attachment_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Duplicate</value>
    </filters>
    <label>PAGA possible duplicate attachments</label>
</ListView>