force-app/main/default/objects/Attachments_Plus__c/listViews/PAGA_Unmatched_Documents.listView-meta.xml
<ListView>
    <fullName>PAGA_Unmatched_Documents</fullName>
    <booleanFilter>1 AND (2 OR 3) AND (4 OR 5) AND 6</booleanFilter>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Court_Case_Number__c</columns>
    <columns>Case_Management__c</columns>
    <columns>Employer__c</columns>
    <columns>Plaintiff_Information__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Manual_Screen_Status__c</columns>
    <columns>IFP_Claimed__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Management__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Cure Dispute,Court Complaint,Proposed Settlement,Other PAGA Document</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Employer Response/Cure,Amended Notice,In Forma Pauperis,Court Order/Judgment</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Integration User</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Teodros Negussay</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Attachments_Plus__c.General_Document</value>
    </filters>
    <label>PAGA Unmatched Documents</label>
</ListView>